fixed overflow

--- a/_sass/print.scss
+++ b/_sass/print.scss
@@ -8,6 +8,7 @@
     width: 100%;
     max-width: 100%;
     margin: 0 auto;
+    overflow-y: scroll;
   }
   .container {
     box-shadow: none;
